show settings page content after all data has been loaded and inserted to prevent layout shifts and transitions

--- a/src/views/options/layout.css
+++ b/src/views/options/layout.css
@@ -70,6 +70,10 @@
   transition: all .3s !important;
 }
 
+:root:not(.loaded) {
+  display: none;
+}
+
 
 * {
   margin: 0;
